--- a/app/src/main/res/layout-land/activity_movie_detail.xml
+++ b/app/src/main/res/layout-land/activity_movie_detail.xml
@@ -12,16 +12,38 @@
         android:orientation="vertical"
         tools:context="br.com.agilles.filmesfamosos.activity.MovieDetailActivity">
 
-        <TextView
-            android:id="@+id/tv_title_movie_detail"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:layout_margin="10dp"
-            android:text="@string/movie_title"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title_movie_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="@string/movie_title"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <ToggleButton
+                android:id="@+id/tb_favorite_movie"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/check_favorite_movie"
+                android:focusable="false"
+                android:onClick="favoriteMovie"
+                android:focusableInTouchMode="false"
+                android:textOff=""
+                android:textOn="" />
+
+
+        </LinearLayout>
 
 
         <android.support.v7.widget.CardView
@@ -185,7 +207,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:padding="5dp"
-            app:cardBackgroundColor="@color/black"
+            app:cardBackgroundColor="@color/background_dark"
             app:cardElevation="8dp">
 
 
@@ -201,25 +223,25 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:src="@drawable/ic_rate_review_black_24dp"
                 android:layout_margin="10dp"
-                />
+                android:src="@drawable/ic_rate_review_black_24dp" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_margin="10dp"
                 android:text="@string/reviews"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_margin="10dp"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
