--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -12,16 +12,38 @@
         android:orientation="vertical"
         tools:context="br.com.agilles.filmesfamosos.activity.MovieDetailActivity">
 
-        <TextView
-            android:id="@+id/tv_title_movie_detail"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:layout_margin="10dp"
-            android:text="@string/movie_title"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title_movie_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="@string/movie_title"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <ToggleButton
+                android:id="@+id/tb_favorite_movie"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/check_favorite_movie"
+                android:focusable="false"
+                android:onClick="favoriteMovie"
+                android:focusableInTouchMode="false"
+                android:textOff=""
+                android:textOn="" />
+
+
+        </LinearLayout>
 
 
         <android.support.v7.widget.CardView
