--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,6 +10,10 @@
         android:orderInCategory="2"
         android:title="@string/filmes_melhores_avaliados" />
 
+    <item
+        android:id="@+id/mi_favorite"
+        android:orderInCategory="2"
+        android:title="@string/favorite_movies" />
 
 
 </menu>
